# django-feature-flags

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: api.md  examples.md  frontend-typescript.md  frontend-vue.md  rest-api.md
feature_flags/: admin.py  apps.py  cache.py  conf.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
feature_flags/management/commands/: feature_flags.py
feature_flags/migrations/: 0001_initial.py
tests/: conftest.py  settings.py  test_admin.py  test_api.py  test_management_command.py  test_migrations.py  test_models.py  test_utils.py  urls.py
